0.6.x
==============
!! Breaking Change !!
.NET 4.0 dropped

Initial .NET standard support work:
    moved to .NET 4.5 (not core yet, aiming for 1.1, but it does compile on 1.6).
    updated internal Http to use HttpClient.
    updated reflection code to be complaint.
integrated IQ Tool Kit, retaining the NOTICE and licence on those files.
initial support to create index's.
Supported more of the Linq interface
    Support for Sort(s)
    

0.5.x
==============
Initial support for MongoQuery either by a 
    defined query object or JSON.
    Linq expression / Query<T> (partial support)
API support registering types (required for Linq query)
Small changes in the pipelines, Load, Commit (backwards compatible)

0.4.x
==============
support for Couchdb 2.0
updated internal http code

0.3.x
==============
updated to newton 9.x, which required updates to serialisation code

0.2.x
==============
improved the serialisation code

0.1.x
==============
Initial release
support for Add, Remove, Attach, and get by Id(s)