@@ -13,17 +13,17 @@
         <summary>ArmChair is a .NET Client for CouchDB</summary>
         <copyright>Copyright dbones.co.uk</copyright>
         <language>en-US</language>
-        <tags>UOW CouchDB Document Database Client Linq</tags>
+        <tags>UOW CouchDB Document Database Client Linq NoSql</tags>
         <dependencies><group><dependency id="Newtonsoft.Json" version="9.0.1"/></group></dependencies>
     </metadata>
     <files>
-        <file src="src\ArmChair.Core\bin\Release\ArmChair.Core.dll" target="lib\net40\ArmChair.Core.dll"/>
-        <file src="src\ArmChair.Core\bin\Release\ArmChair.Core.pdb" target="lib\net40\ArmChair.Core.pdb"/>
-        <file src="src\ArmChair.Core\bin\Release\ArmChair.Core.XML" target="lib\net40\ArmChair.Core.XML"/>
-        <file src="src\IQToolkit\bin\Release\IQToolkit.dll" target="lib\net40\IQToolkit.dll"/>
+        <file src="src\ArmChair.Core\bin\Release\ArmChair.Core.dll" target="lib\net45\ArmChair.Core.dll"/>
+        <file src="src\ArmChair.Core\bin\Release\ArmChair.Core.pdb" target="lib\net45\ArmChair.Core.pdb"/>
+        <file src="src\ArmChair.Core\bin\Release\ArmChair.Core.XML" target="lib\net45\ArmChair.Core.XML"/>
         <file src="nuspec\Apache License 2.0.txt" target="Apache License 2.0.txt"/>
         <file src="nuspec\changes.txt" target="changes.txt"/>
         <file src="nuspec\license.txt" target="license.txt"/>
+        <file src="nuspec\notice.txt" target="notice.txt"/>
         <file src="nuspec\ReadMe.txt" target="ReadMe.txt"/>
     </files>
 </package>
