@@ -20,7 +20,7 @@
     "gulp-dotnet-assembly-info": "^0.1.10",
     "gulp-download": "0.0.1",
     "gulp-if": "^1.2.5",
-    "gulp-msbuild": "^0.3.3",
+    "gulp-msbuild": "^0.4.5",
     "gulp-nunit-runner": "^1.1.0",
     "gulp-unzip": "^0.1.3",
     "lodash": "^3.6.0",
@@ -33,5 +33,8 @@
     "xml2js": "^0.4.17",
     "xmlpoke": "^0.1.9",
     "yargs": "^3.7.0"
+  },
+  "dependencies": {
+    "gulp-msbuild": "^0.4.5"
   }
 }
